--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import "~antd/dist/antd.css";
+@import "./reset.css";
 
 body {
   margin: 0;
@@ -7,7 +8,6 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  font-size: 16px;
 }
 
 code {
