--- a/src/index.css
+++ b/src/index.css
@@ -1,50 +1,84 @@
 @import "~antd/dist/antd.variable.min.css";
 
 html {
-  font-size: 62.5%;
+	font-size: 62.5%;
 }
 ol,
 ul {
-  list-style: none;
+	list-style: none;
 }
 blockquote,
 q {
-  quotes: none;
+	quotes: none;
 }
 blockquote:before,
 blockquote:after,
 q:before,
 q:after {
-  content: "";
-  content: none;
+	content: "";
+	content: none;
 }
 table {
-  border-collapse: collapse;
-  border-spacing: 0;
+	border-collapse: collapse;
+	border-spacing: 0;
 }
 
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
-    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  font-size: 1.6rem;
+	margin: 0;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+		"Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+		sans-serif;
+	-webkit-font-smoothing: antialiased;
+	-moz-osx-font-smoothing: grayscale;
+	font-size: 1.6rem;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
-    monospace;
+	font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
+		monospace;
 }
 
 input::-webkit-outer-spin-button,
 input::-webkit-inner-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
+	-webkit-appearance: none;
+	margin: 0;
 }
 
 /* Firefox */
-input[type=number] {
-  -moz-appearance: textfield;
+input[type="number"] {
+	-moz-appearance: textfield;
+}
+/* Scale font size for antd */
+.ant-menu-title-content,
+.ant-table-cell,
+.ant-list-item-meta-title,
+.ant-btn,
+.ant-tabs-tab-btn,
+.ant-checkbox-wrapper,
+.ant-alert-message,
+.ant-descriptions-item-label,
+.ant-descriptions-item-content,
+.ant-list-item,
+.ant-collapse,
+.ant-timeline-item {
+	font-size: 1.6rem;
+	line-height: 2.4rem;
+}
+
+.ant-card-type-inner .ant-card-head-title {
+	font-size: 1.6rem;
+	line-height: 2.4rem;
+}
+
+.ant-form-item-label>label {
+  font-size: 1.6rem;
+}
+
+.ant-tag {
+	font-size: 1.4rem;
+	line-height: 2.2rem;
+}
+.ant-modal-title {
+	font-size: 2rem;
+	line-height: 2.8rem;
 }
